blog_posts_app/k8s-configs/observability/ingress/jaeger-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jaeger-ingress
  namespace: observability
spec:
  tls:
    - secretName: observability-tls-secret
      hosts:
        - observability.jaeger.blog-posts.com.localhost
  rules:
  - host: observability.jaeger.blog-posts.com.localhost
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: jaeger
            port: 
              number: 16686
  ingressClassName: nginx
